discount admin search fields
