# docs/swagger.json
@@ -1233,6 +1233,24 @@
                         "description": "search for item",
                         "name": "searchTerm",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "search for product item",
+                        "name": "productItemId",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "search for related user",
+                        "name": "relatedUser",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "search for creator",
+                        "name": "createdBy",
+                        "in": "query"
                     }
                 ],
                 "responses": {
